@@ -1,3 +1,7 @@
+2010-07-02  Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Clean example model file.
+	* Remove unsupported 'failover' parameter in model file.
+
 2010-06-17  Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Better target checks (ticket #71).
 
